force-app/core/main/default/objects/Demo_Persona_Journey__c/Demo_Persona_Journey__c.object-meta.xml
<CustomObject>
    <label>Persona Journey</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Persona Journey ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Persona Journeys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>