force-app/core/main/default/objects/Demo_Persona_Journey__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Commercial</fullName><default>false</default><label>Commercial</label></value>
            <value><fullName>Wealth</fullName><default>false</default><label>Wealth</label></value>
            <value><fullName>Retail</fullName><default>false</default><label>Retail</label></value>
            <value><fullName>Corporate Comms</fullName><default>false</default><label>Corporate Comms</label></value>
            <value><fullName>Treasury</fullName><default>false</default><label>Treasury</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>