force-app/core/main/default/objects/Demo_Persona_Journey__c/fields/Enrolled_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Date__c</fullName>
    <label>Enrolled Date</label>
    <type>Date</type>
</CustomField>