force-app/core/main/default/objects/Demo_Persona_Journey__c/fields/Journey_Name__c.field-meta.xml
<CustomField>
    <fullName>Journey_Name__c</fullName>
    <label>Journey Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>