force-app/core/main/default/objects/Demo_Persona_Journey__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>Paused</fullName><default>false</default><label>Paused</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>Exited</fullName><default>false</default><label>Exited</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>